# Personal-Digital-Assistant

./: .pre-commit-config.yaml  .pyre_configuration  README.md  all_voices.py  claussoft_pda.py  pyproject.toml  requirements.txt  setup.py  test_claussoft_pda.py
.github/: dependabot.yml
.github/workflows/: ci.yml  lint_python.yml  pre-commit.yml  pyre.yml
claussoft_pda/: claussoft_pda.py
src/claussoft_pda/: claussoft_pda.py
tests/: test_claussoft_pda.py
